tests/snapshots/cli_snapshots__transactions_list_table_filter_tag_snapshot.snap
---
source: tests/cli_snapshots.rs
expression: "run(&[\"transactions\", \"list\", \"--tag\", \"Shopping\"])"
---
╭────────────┬────────────┬─────────┬──────────┬──────────┬──────────┬──────╮
│ date       ┆ name       ┆ amount  ┆ reviewed ┆ category ┆ tags     ┆ type │
╞════════════╪════════════╪═════════╪══════════╪══════════╪══════════╪══════╡
│ 2025-12-15 ┆ Amazon.com ┆ -$57.48 ┆ ✓        ┆ Shops    ┆ Shopping ┆      │
╰────────────┴────────────┴─────────┴──────────┴──────────┴──────────┴──────╯
