tests/snapshots/cli_snapshots__transactions_list_table_page_info_snapshot.snap
---
source: tests/cli_snapshots.rs
expression: "run(&[\"transactions\", \"list\", \"--page-info\"])"
---
╭────────────┬────────────┬──────────┬──────────┬──────────┬──────────┬──────╮
│ date       ┆ name       ┆ amount   ┆ reviewed ┆ category ┆ tags     ┆ type │
╞════════════╪════════════╪══════════╪══════════╪══════════╪══════════╪══════╡
│ 2025-12-15 ┆ Venmo      ┆ -$100.00 ┆          ┆ Other    ┆          ┆      │
├╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┤
│ 2025-12-15 ┆ Amazon.com ┆  -$57.48 ┆ ✓        ┆ Shops    ┆ Shopping ┆      │
╰────────────┴────────────┴──────────┴──────────┴──────────┴──────────┴──────╯
╭─────────────┬───────╮
│ key         ┆ value │
╞═════════════╪═══════╡
│ endCursor   ┆ c2    │
├╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ hasNextPage ┆ false │
╰─────────────┴───────╯
