tests/snapshots/cli_snapshots__transactions_search_table_snapshot.snap
---
source: tests/cli_snapshots.rs
expression: "run(&[\"transactions\", \"search\", \"amazon\"])"
---
╭────────────┬────────────┬─────────┬──────────┬──────────┬──────────┬──────╮
│ date       ┆ name       ┆ amount  ┆ reviewed ┆ category ┆ tags     ┆ type │
╞════════════╪════════════╪═════════╪══════════╪══════════╪══════════╪══════╡
│ 2025-12-15 ┆ Amazon.com ┆ -$57.48 ┆ ✓        ┆ Shops    ┆ Shopping ┆      │
╰────────────┴────────────┴─────────┴──────────┴──────────┴──────────┴──────╯
