tests/snapshots/cli_snapshots__transactions_set_category_by_name_table_snapshot.snap
---
source: tests/cli_snapshots.rs
expression: "run(&[\"--yes\", \"transactions\", \"set-category\", \"txn_1\", \"--category\",\n\"Other\",])"
---
╭────────────┬───────┬──────────┬──────────┬───────────┬──────┬──────╮
│ date       ┆ name  ┆ amount   ┆ reviewed ┆ category  ┆ tags ┆ type │
╞════════════╪═══════╪══════════╪══════════╪═══════════╪══════╪══════╡
│ 2025-12-15 ┆ Venmo ┆ -$100.00 ┆          ┆ cat_other ┆      ┆      │
╰────────────┴───────┴──────────┴──────────┴───────────┴──────┴──────╯
