tests/snapshots/cli_snapshots__transactions_set_notes_table_snapshot.snap
---
source: tests/cli_snapshots.rs
expression: "run(&[\"--yes\", \"transactions\", \"set-notes\", \"txn_1\", \"--notes\",\n\"hello world\",])"
---
╭────────────┬───────┬──────────┬──────────┬───────────┬──────┬──────╮
│ date       ┆ name  ┆ amount   ┆ reviewed ┆ category  ┆ tags ┆ type │
╞════════════╪═══════╪══════════╪══════════╪═══════════╪══════╪══════╡
│ 2025-12-15 ┆ Venmo ┆ -$100.00 ┆          ┆ cat_other ┆      ┆      │
╰────────────┴───────┴──────────┴──────────┴───────────┴──────┴──────╯
