tests/snapshots/cli_snapshots__transactions_set_tags_add_table_snapshot.snap
---
source: tests/cli_snapshots.rs
expression: "run(&[\"--yes\", \"transactions\", \"set-tags\", \"txn_2\", \"--mode\", \"add\",\n\"--tag-id\", \"tag_shopping\",])"
---
╭────────────┬───────┬──────────┬──────────┬───────────┬──────┬──────╮
│ date       ┆ name  ┆ amount   ┆ reviewed ┆ category  ┆ tags ┆ type │
╞════════════╪═══════╪══════════╪══════════╪═══════════╪══════╪══════╡
│ 2025-12-15 ┆ Venmo ┆ -$100.00 ┆          ┆ cat_other ┆      ┆      │
╰────────────┴───────┴──────────┴──────────┴───────────┴──────┴──────╯
