tests/snapshots/cli_snapshots__transactions_show_table_snapshot.snap
---
source: tests/cli_snapshots.rs
expression: "run(&[\"transactions\", \"show\", \"txn_1\"])"
---
╭─────────────┬────────────╮
│ key         ┆ value      │
╞═════════════╪════════════╡
│ id          ┆ txn_1      │
├╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ date        ┆ 2025-12-15 │
├╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ name        ┆ Venmo      │
├╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ amount      ┆ -$100.00   │
├╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ category_id ┆ cat_other  │
├╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ reviewed    ┆ false      │
╰─────────────┴────────────╯
